add intel-device-plugins-gpu chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:3bk1P4/TSPI5Sm5KzEkNLohpIfy5vPszu1Wup+Oj/m/7EF+Y5/9XORahck02BgAJa8nsiUgKpzPYWTAJXMIu5Bk=,iv:G43yYfxbogyXjvIrIKGDNoDMHh/Z5EF5gsWt61MGzsE=,tag:D2quVo0PGYHTihxcfsIgmQ==,type:comment]
-#ENC[AES256_GCM,data:LY1Ew6l+oGeUfyvZYCmgGSS6EmNmxQOnEyF70xDOS9T68wvnuMHTy4d3Cms=,iv:8pLxcbEHkpb7tGhqgG3OvCItYBH+XM0gaBRzBIDJLJM=,tag:FcLn9ug7jySoMsh84U+Q4Q==,type:comment]
-VIP: ENC[AES256_GCM,data:V2PaS/7XZnfdj1Grxw==,iv:Prdggxgn33q6r2uMReROIwap890lLpA1bJjBJ/aIKUI=,tag:3O5NP8qky2q2frnMTiA3SQ==,type:str]
-#ENC[AES256_GCM,data:xgnT1v82KbsZhtiMMqI1Bd1jQHcDim8hJLhe,iv:XwMJN4wchPR6rlLNVvAWVy1LA4JXrMNOMfhTHSPsOIY=,tag:lrDkaJDcCzj4s9UBIkvURA==,type:comment]
-#ENC[AES256_GCM,data:Fh/dCJrdD1jSUURXqhAgYO0UN1YxVmU4QSCFZsQ+KPnZ6w0vLCLQ6kx8pT+JD5JG/5vwoiez4MDa57TXAoqBF9Tvymu00CFOZ2f3YvckyhZZ9fmk84DiwBE=,iv:HPbGZ/UR3mBQS2pb40pDfCaZuNsiV2Ii98KV/weihSw=,tag:Rblrx6q5yqCBQBKco3X6AA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:wpRQyTXc4ju6en9ZyNE=,iv:VEqwEeLEMsO6vI5JsLyBNU3v9EU+W2vAJIv+eRmWQPE=,tag:Q+BJ6AE4cgh81lxG2Yoonw==,type:str]
-#ENC[AES256_GCM,data:WQs+G6GK3vnCgDA9UtkK2BFckGjE55TjL5t7TRhBZ9w23g==,iv:2270HS5DqgBop60ufa4Mq1dyS8QS9oy8d3UE2L4+c1E=,tag:AHiaKyV6Un88hdPkBzrDSQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:h4v2/SY+J6miJuJ5TA==,iv:BFc1CDpGaARmrVjs48GlQfmljlTZOJtaOTbZ7hBosKc=,tag:TRqNmBl9D0TduGel40RJQQ==,type:str]
-#ENC[AES256_GCM,data:k97RuUhB0ADw24/XzpvrCTUgHw096pQ0xmDS6SfNZHERCBeQnbAWqJKa++cWCkI=,iv:c/aEJpWcgRQN0/vLCEsaStSfP3YJ85jNwol34vMlnoc=,tag:YhNr+wzWJtR7mn35CEK+jA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:5xbAZQNCt2fG3eJvU5ymNh/7o3nfbBdVcWKMMZYYgA==,iv:pPa2Ix6mj1WTQ+3d6EfvC+PdTMSml8BPJD8mJWo9beE=,tag:IEAtFXSEm+r8ehJVHqPRCQ==,type:str]
-#ENC[AES256_GCM,data:XfAVPtaiN22alc1yThpmYNeXVWfQvFwm5Di6zSHZOg4Owjy48oyaN3Fnkg93OubW+J4bAgaHL/+84ddfsoU+8cCPK37jeI3Qv58UuRQ3IhW1Cw==,iv:g3HQZZ9x1vWCC+qsVHz412RDCBRXcX4H0d5jSfF7258=,tag:4dFKpWS0FJEKq9N/HmA51A==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:r+6R7RKAtPs6ekYIKdKx,iv:qhDh/WQOZBLkPgkhcCKh2NAXS6YagACu5pdXFQMduEY=,tag:MzqmxLGdNKBprTXCdPJOEQ==,type:str]
-#ENC[AES256_GCM,data:oYSra8SWUoqsejup013UEIsGWWlV8gb+Xm2xiKF2cEch,iv:KMLrhtHDSFPDlqlq91btEE5c3bKc45iXLUsr6MPY0Es=,tag:w8zgIelqAtnNIK8bzAp+EA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:8j+CBE0dGD7Kis/GqEHw,iv:jCQ/5pNI9Ss9wOvEMkqw6kfzaH1wBmaOYD6l8Q68hJY=,tag:uI72mB2Nt0rHhvtmZ+J33A==,type:str]
-#ENC[AES256_GCM,data:SRzn61dQ/hKWnhiF4Z28DtyH4dC/Lm/GjPQbyn1q2bjAaUvLqjLsBOmlQMxJn2aRinC1aD1EOvftZEiyrUfKmo6Z1TlIresLeiXY6O1R2BU=,iv:Jg5VW+dwxXcjhf4eEkqNUPSi9w2GhlGkCllRF6+hra0=,tag:NsN0v/yi1XbWFxInd4h1rg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:InjuzWe0ypmgQ3u2tjNt,iv:2c1fzjZBH2WKpNeOvtO0pE92OcIbPTOltMQGkoCBQAg=,tag:YcgRji30AcvnX6pTCjNDcg==,type:str]
-#ENC[AES256_GCM,data:VxnIG1pTrxyE+UV07MqKpiefXk7rcviZkila1wGBeRtQ6dgSMDeTlmSlJ6nYXv3xes71kwOfeEi6W+0Qhug07/fG+PBUcHccZAuU15l2adUUyH0wDvCD,iv:aoRW++tkPfxUK24eDYIj+sOP0Ewxj0uIh7nX+I1ROxI=,tag:uPH4apKZYzc7T31z2nAYdQ==,type:comment]
-#ENC[AES256_GCM,data:ZMYEuAN4EC2Gpu+/ONvRFSnltiYEVd/SIGsBsG8FFvKZpjnWXAQCCzH/rmw5R33d2G0lruZE42+bbNiWF8DYnMTDNDDPqdOtgBSYSttvXVTfw6+hLmjqjQpAlRkwEbUvqPZCldNbdoMY8YKD94LOVKpataVIuu5FJ08fUw==,iv:HsFKVluzH7fDqfjRPAMjUUhAJXqpE4ajvcOythKqneQ=,tag:Auqt+oIx8SqjdDFJbIWPRA==,type:comment]
-#ENC[AES256_GCM,data:aKXxWT29K+NzJe5dDLCldyQd/2IDvzz2rD/62NxR9DjvWxOxuNhFEnKrz1nB0UbkIOmMwG2XQIzvbs5QdF6HbrBlPY/J4ZE44uDO4w+rpnI=,iv:B7INPvEeGWmOlWgHNFeYnsq8cUuOch2Xb5t5waZk/eg=,tag:BtH5IttHAjg8wfz0SJuNXA==,type:comment]
-#ENC[AES256_GCM,data:pfxa6F51a0ufxFrXU1uyWpmIHBeW0m8C89HgHB115p+L7qpcKtjTKvg1HekO6Ub2pCRshgpc,iv:I9AE8vMMNelfdRKyfdJl1ID2zFOxeymneFD4ej6IONs=,tag:9PkGhf7B6MaRKJi1xNlK/Q==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:vsieUhtSGT83g6of,iv:SGrLUtWWq2DjYNOajFJZ0CDTKTlFfIMkojN7L1psd4s=,tag:AOL95dM8K1VweZcMk8rIJg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:yNQUd/eY+hp5GlMrhLwgALY=,iv:ibGARNNBFDKzXOVWv0PnIDNcjye93zf30jW76/TUuRc=,tag:8bFe/8cpXyYCiA/5/CYsug==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:3yuzZJoY3tzcvb6ZvxENlF/zd8f2X3cJOVmDcOXnMKI=,iv:MK3kOVvDRbY4+1NK5Uo9NAW7/ZJeaAKxT47j5K6WsYM=,tag:vlE+gI1uiTC7t4JzZ1qlhQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:N0u4xJME5uwcOZeqnu2XPeeG/Emp8n4BX7dDIZ0tgfYZXA0irxA0NQ==,iv:32ogjQOiWdWY7gqmZCvP3vL8u9qPfsN494k59WMS74g=,tag:+ZFmbnxWK0Pt68qKiJK1RA==,type:str]
-#ENC[AES256_GCM,data:8N7J7wE2Cp7Hk8L4Bm1gdXpTzpz1C2yDOX68OyEMcD4FsxOmFF51T/K9pF3fy8bP1AXO/daJ/8McVn6iXniATA==,iv:10wJzBgOGYlaTNt5XKISHi++6OPTR4Tyv1NIKtH2Vis=,tag:b327xsWipYNHK9UwpddXiw==,type:comment]
-#ENC[AES256_GCM,data:fJsYDtqOoCnYWMSyf7tdtHS8l+38TpTIqA7f15q0gIu8aIfh9qV+1gSR2POQhU82OgOkBrHFjBo=,iv:DwpjLaIR57x8ObnVcx9R+nVV8Yzf+ZXxl3Woyks5/+w=,tag:zm1z3GBzeBCFS4/vUq7Q2g==,type:comment]
-#ENC[AES256_GCM,data:I1WMEwtZvxCchkfiC2CZokHsv8mqc/Ko7g==,iv:6GNtyPxZURQMXDAQNQa0+lL1o1MnaCZEdvbEXAo9MZ8=,tag:Fszd7T2feAtQeduVqdBrpA==,type:comment]
-#ENC[AES256_GCM,data:PEMe29rx2JOSMtpnnxHEq4eEULXLhOliifK7kQDWKXJUzYni8pdV026amQtmABDmndDKBTccRG7JDGrBJ0VhA3awZ45BhW29PHwb+pI=,iv:gi0tukFnKuWy+5m5YMPBOMRFl0ClEd8lalof7CxK5Mo=,tag:eaI1PR1mKLr2uWBCEVqh6Q==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:jHcOiAjb9Vbm98XzXlUgyHXjHcaGG+6T8YzKYHKIBTlaeLvMGImUmeO1s3+haro+,iv:Pjt1IMkOza9wXSRbIN2PlEEE9CShv94EbxAdHSmEfGg=,tag:9DLL9+Ueir4ZR8qtzdmJBQ==,type:str]
-#ENC[AES256_GCM,data:1xExtJA+VP+7W3xPH80yh3hQhQUhKxb3tVABvZEvDk5xvZ7uJW4x11RqXuXZmOqU5l3A0Y5jDxd71ryLSVcaxre0UhMnjts=,iv:CAKmyt4glKecxrAWqbiFiFYra39tFHoMvGL3pZPidP0=,tag:9QHE8BKDr+xlRRovExEYlg==,type:comment]
-#ENC[AES256_GCM,data:YbIxrDVQb7bKOLb3tgEr9lO/4sLzAfD3YQBFXW6wE3AXHybou57dujHrPnLzl1TtvCsdMpqp,iv:bvvEPxCjBDXXfcbAie9EQ9Bj8g/ZVZEk1tSj2HX7V8M=,tag:Asqjom3z0tcAKYbU7vNiSQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:l/qEOipy5A==,iv:ur3GiSBjeCU3LzqSAFpurKc0ru++WBA9hOTsmpheAgo=,tag:8IrCDQ8ZO74YPKJx35+0yQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:sWAYGZ2gp+nMDyG0WrfjHWjsIIA=,iv:w6H0pr3VH+TZJl+KdXPRCMNzVpSB5YRTATMBJ/2Ec3Y=,tag:WGcMOg+9gx/lZnCky9wdrg==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:rWXyZymtd4Nacfk=,iv:h9tPQ4KPPSOuU2JEeMpS8TWUgM58XaUpmJ1qX1M9LL4=,tag:4fW0wKK+GTu6bv1CJjkr8Q==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:OTZYsqdzfQLNAN31Bf76,iv:Ot41uuF5SAkCkA8Bhh9NLXCCAWvm23IWg3tJpDDGmM4=,tag:fqcYuHKKXFHBLnAbhHvhfA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:RxHbR2JG9P83BIN8Num0Sv3wUKDlTJsrfA==,iv:mhSpta6WOZpIbJkxHBSYd3gjI0PVgavSJErZhH7t3QA=,tag:Y5rmXTAGATVZtahsUMKzsw==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:NzQDuN2QPwZkNXdmVNlC6AOv5xHc8NwK/sQHRhz2zA==,iv:Z4up1EMt+tuTFTAqxXHWfFpl/Cq20TRD970RrM2xdZg=,tag:ImAbK/z/LDTBgjfSJI8eAg==,type:str]
-#ENC[AES256_GCM,data:+BSjntb9zABhb6tIm6QJpO5pcx/VGlfIhQuzlolOL+7iGZvjYNk=,iv:vUQjPhyqfbeOOz1xB1GKPxb9N4/QxbNOBXpm2njXoPc=,tag:J2Z0FLMn7gGPkJQIRF1jcg==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:ORzplLKylxsN/+JAa4TmumYcMiI=,iv:Gnu0dpSHGUFgStLJmZx7youea21H/TZdhc//WYK6LnY=,tag:qE7OnIszooIeZSc3VJJQyw==,type:str]
-#ENC[AES256_GCM,data:AUoPdAnZ3+w3Fc/Dc00=,iv:sTC+07TaB3K1y6/g2Be/R+Ry3zmkmLIvUOjYuIfUElM=,tag:G7fx2yM9Qj1X2UiDlbXlYw==,type:comment]
-PODNET: ENC[AES256_GCM,data:2tIhetOCu9ol7uRu6Q==,iv:Wrzv8XK9XC4Y8jbtPGDuXZXp963PSeUqyl6jB7UD3zU=,tag:FFjBex2UPq0cu8V8vZPNmg==,type:str]
-SVCNET: ENC[AES256_GCM,data:aCJP1YnFC5wSS7FXkQ==,iv:LpNCKKhv/XZkozN2QYaNkpN5vKOT+Biz/q+IXjbRcjk=,tag:MA0k7try+ORwp98Ef1dKMQ==,type:str]
+#ENC[AES256_GCM,data:ZxRqrW/aQ5iB7OcdF7en7KnvaW5n5ReI5BHDd/W1NWqi7LLXvGvaO75VeO/e5odqXck0BRiUD8Ynr8QoL6/o0Gk=,iv:zeE8+gRsT+tXqG7mz0VD7pFM+spTWZsbK2stc5D2Nfo=,tag:7YaIHiUnXIZYopMczMFlFw==,type:comment]
+#ENC[AES256_GCM,data:Nh4zukhyiJp3qZjCyZVpzfVajdihiH2e56ZLXA3aFrNtAeADVQRgVXFPAVs=,iv:rqfCeN+TnZLTelMqsmnceB264PwyZ3RzLdpss0RM8dI=,tag:fpcRYjCq8qCWz0Xqw9qRJQ==,type:comment]
+VIP: ENC[AES256_GCM,data:rSXUFHcHOqj5Kwqecw==,iv:oji3JyU1Rijv60qZWiFa+zk6vRSKRh5ZLcniY6ejD0c=,tag:KmIkYhd5tGpJaS3IvETOUg==,type:str]
+#ENC[AES256_GCM,data:6xv/4bpc99bxdnjcjl+wiVFq9cXD4hpRnWpn,iv:kN19dqBZKTGaqDEqGBInmYUmuDZ9L3rNLn8LLgCDs9w=,tag:Z8Qb4wBcJralq/EePPS/Eg==,type:comment]
+#ENC[AES256_GCM,data:JxrkWzZeXOQKF2dgLg42bm34PBFZPq/NE6QDcon2/BXTibWFEpW99LYao5NIj3qerniSP31/X6hRtn2P0Z8pQCx+LT4yO/DsxbEdEcYZU4tEGvRMQqyXtx8=,iv:lsGRXgdhGtgKQ098OuphGIFh1zztN1DUzX3B48hQ1M0=,tag:ne2b00pMxnQ9pswx2kk8EQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:gqrO8hSVKLLGSqZACoI=,iv:np5mtL7f1ZcATvc66LM50i9UPO6FVdXfwuRjPTMfdac=,tag:MRf0JdS5bHykcqS6q2kqFA==,type:str]
+#ENC[AES256_GCM,data:X/UhzlStC2AjIof18QdvIrNTWnp7/enxHkp50P6u6ofBKw==,iv:Y2QO5iTxM1VeBrYC2xKTr9wv8BfDcA8Y0olB3hXE6w8=,tag:KyCO5464beFw0BsXPY4bTA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:QUmVv6Thxd//uN+CtQ==,iv:ur6zD75dMmb7iaKAwoBTdzVK46VRDmXorD2oMS+ooXI=,tag:YAtfrVLFkgm2ty2XpuSCvw==,type:str]
+#ENC[AES256_GCM,data:a1gq3ao701/rTkVGQcE1H4IIl5veGyPHzGbd/FV2O5br8ehdeVvShvg6PJOzxBw=,iv:KvykYgrRVACRGjy1qhtnbugjriY+IBql637ajh8+pu0=,tag:/G3KghAqs+Ut+BWYrFyoIA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:H8lHj23Yjdset+YAuLYRy+jrs8kx4r3fs9GfcJlxkA==,iv:lFLKERFin1VpFLeQUeYXAGVdIZw8MRvkPWzN6qfqfi8=,tag:YQEjq3zxv5KhPsGTL96FRg==,type:str]
+#ENC[AES256_GCM,data:UgOSFzf31yZ54/OlhMW2KFJziVfwsuZ3SPj8ftpA/Pke71ph+cY1Cp2bpCDYwpL/OpECpnOeXaGzc6eUT5y5Cxe5JZlVjaraD2d6J/LuH72VRQ==,iv:I0ahpghTavcP/kWb2Ny9sWsMR1K6cl39vuiAFsTcP1M=,tag:O4IYfJ3w3XoTNh0pmmX4gw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:f+N/R7Xbkhds5a7CvTSL,iv:IzcePVH8vVY9pj7bQaKqUBIHz80+lthMKS6DeMytcQk=,tag:L6PWzSTfCwlFCbwHj9Is6Q==,type:str]
+#ENC[AES256_GCM,data:A4iSQKZnMyiSnDg5n1u9hS86lU22/emU8n+23xfzi5Fn,iv:nxrqG2f1He/1dPTrEHLl63L+J4mVPU+VgR6334Qx75s=,tag:3pp6TWat6O3CS4ch0Pvt9Q==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:Hto9JAw2xQ8jwnWkONn/,iv:nESkwJ5razPXVfHtNaIWyJ2kbqpWEDfIvGMPMK6HE2g=,tag:qSKTcCIsYRH6UQeSbfgU1w==,type:str]
+#ENC[AES256_GCM,data:aapEDVES4RyPf67mn+D+k0CPoC/h354Q1C4n/Ltx2NZ3/WEeCQumK0DH82tunZpCHqRE2uZD6tpXVxUwbDVwEcWlq3eXhWMzak57TUZVy7w=,iv:h8Ck4z2p24/Ev17PyNTavl32qRp12QaPQ7IzmGGXA1o=,tag:R4su/uogwudCnA1IboVSQg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:1IUEXTGqUYJKoOnorwO2,iv:xumeOA63HiXdwjDjapLqXfEDdqWojVu+8uGpnB/oYPM=,tag:kSNoqvT97MuRg4DW3vfo7g==,type:str]
+#ENC[AES256_GCM,data:n8XikFHiIjKArghHvE9M1zHEim+5OGAXdu0ZbJzZGx00lBMNzH7E9oSpssBcmpv5mBGjBGmN4K9fVoVyFDlfqS7y4KfOvb0DSEt1YqcrxEZ6ztrcrXuL,iv:D5s18iQj7Q15f9UTCmZJ7gOQtlKQ9mvKTF/2e7/eOl0=,tag:NLygULGii4mLIpMLTqqBKg==,type:comment]
+#ENC[AES256_GCM,data:yNfyd2GbLrAMCiP3XsdzwpzppivWMs0IPHCBrCSo48XySy7k+OG5zCR+TfxbMHE9A+RTwuMGmFeuTZ1Bsdho+Mfv7vLatWBG+AL9COCYuufcTlht66HzyGH4bvbVsSlaZXyzomAg8BJ5tQonwuRregES9cYvSucuX2NF6g==,iv:Fqfb7WKBqA7O7Cyb/1X5FLqaOMOe6mBo+V83aKZJuck=,tag:sY/9w/JC23RelW3kIEFFXg==,type:comment]
+#ENC[AES256_GCM,data:UiB42tfVSOm5TI9Owad4ox/bGPnbiiQzXfi7vCHHbR9Lgn7QjOlgAGH8gRG860NJ210eRHMMgdplrmAMqBWcv+FPP84VVUKuXcYpogWyjxI=,iv:2V9BGpvReb6X204pkqDyJdF4KlV2b86+IboSV7SM8i4=,tag:spxpZwLMZUV0zjGicjdVsA==,type:comment]
+#ENC[AES256_GCM,data:YSySL9wxjmLyrWlKtDDNR0CYGRpq9TwlPiC6nLopJUvi+9DgYiufGBRgtaTP0KcFvkBWFeDT,iv:Cw8IqY7xtkruXGUQZl2CfmGSqYN3JONvqm+BUkSYW2s=,tag:+Y9ESPL+qrq+b0HhNZ5Lfw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:k/4ib841e84WhjaK,iv:rCmzYcQJZ5aTDjrT070dGyNH9qow5/pjgp7XazCBdJs=,tag:y1/XhFQc4EvdPsW3mA4ASA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:0Xb+LSwa2r2044nVPG/6iKE=,iv:tnK6N7Pmfmh6I3T6HuZTuHY/pedEqK0oqjpPOQt4/iA=,tag:ehn972PeAcS3J88RX4JTBg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:vI/Gqoq2ZYPsPllwaq54+yHkh1p91YtvP2oAA7cUKJE=,iv:FsVyaiuALCJ+WuHfGkrACELwOLCptvhWHqiXK7+1Y8g=,tag:8tDWndM+S1Tc51JO3hxjsg==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:nMUwPzafhdmzVtziArMIkuIgCT8bOq1sTz5jkHZdYfJ4ov9NtRGzqQ==,iv:w6eP6LIiPQ/U2rxmjIJiHSS9az87nHIkmgctt6TFBdw=,tag:M1owJ92xd7hspk5jcbkusQ==,type:str]
+#ENC[AES256_GCM,data:59tg8zp6BDCjmjbqMVIviSiTC/QVn8x5UCaC5EHrVMLvAnEAeaasxpS2cxF78L0+BrXd/sqDWGPFD0MCnccKKA==,iv:TmdOOBP5IRcJBk5vrwmYsMjVZvLl7UQQ6/+pbKPLt2w=,tag:P+hWJsmCuS1fQdWRIr3qkw==,type:comment]
+#ENC[AES256_GCM,data:a6skvb1/Rwv8W7AI5Moo0RqrADlc0T2q8rsjzFcQl/BRc7IG2qlvKiAlSWLoIxjuuO8MnRTzF34=,iv:NkTA35Qz6VNBhbZFh+HGIOssdNfzJ7+QfoOeXJSkG5g=,tag:NBhj27Ng2D9FK7AouECaJg==,type:comment]
+#ENC[AES256_GCM,data:IzLC3a81Ji3qoMmTjLvxtAMa35II86or5Q==,iv:2s85O0weD3hT3EDjQ40UcKBd2EnIzoTJ3nLVEd6OljA=,tag:YuldfoRmkb/CX9lRzZf6HQ==,type:comment]
+#ENC[AES256_GCM,data:hJ+UsUl8fgwtJERn2KROV7yXXDZJ0yjt6mFxOGb1MRBYJ0U+fk+zG0PedNcV5UhR0uRLCkgN0aUmi9HAIUGe7ni91BeWEw/t9TcZt2Q=,iv:EABHnVMHfoDdNObKKfo5MgXdSk3mmn7lJzTPjZCJ0Lw=,tag:3PEUQTcdF6RtAVH00QBYlA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:8mpLBZZ1T9qhqCLmR90bIC2GKAqJFEoeKaMDNd3prr4HjRSjyo0lzPtYCpXCp5X7,iv:HpletKDjoX83jjSF4WYki/m3gwVEMQ16N4pHFQw+x0I=,tag:3xWYAfhHpR/idfm+Na0WTw==,type:str]
+#ENC[AES256_GCM,data:b8NGFiE66S/a69txsQ9mx4eTtF2yXrVcaH0o2qLDstzirP4jlbYoOfWN46I7zxJyFM1ShZHVV8oEc162xwucgnTO8CF10Zs=,iv:yycYudtJJEwEC9xEe+fxL1LX1lgxcqWFc661NMMu71E=,tag:Q2RfA3yeq2CxU3apqZaMHg==,type:comment]
+#ENC[AES256_GCM,data:q3tuLT8K8A0iMYqFt2gT26hwiQqOKgay3copJNJqrnOhGSPzwPvTF67RTLuOlzcPbVLfN3nn,iv:DxMb0rmxgoWFCvdbIKI1RwpKsfUOaC965nmf1I4z3qs=,tag:+TGtckvzJ2Ejri8ZfNfYZQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:4CyywXQVQg==,iv:eyX2w6bi0wls4+mgQ8mH9exCBLPVE7QiuCPK+h9cJ3s=,tag:Fim191AgllY/sxB+ScfOkg==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:CVjuXTvZ8VpTRowCIXFs6Yo6fDw=,iv:mIwT956nhuBFV1Wy0QplbUYL0tsv0xR+JIODt47ooAk=,tag:FjYTt3CoGmJPxoCsbJSClQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:37kgZsmcbPYf9dI=,iv:1/HkHsafwFvmd157GUGXAtY0e0cVe4+Alspu+HHNwp8=,tag:NnBRgTOwY7BJcB8tAgWrqg==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:PGqjra7aU31kkdU6SGsV,iv:d0kxX3z58FfCsnzwxjzIdGrxF4wiK/mjmyHh6zbJx7c=,tag:gY5IuNtOEoLXaI0vItTCsg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:m00NlHU4KWljkDUVH+PZgtgrtmP67nFwYQ==,iv:KlJOg3uB7lnHVGUZCvR/4ZWbH/0A1qPAe/adyFl3V88=,tag:PnMREEuiMVKhov1EV8y1Uw==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:o08xsSBkd6Kq1J9MERjOFA5MT+6U5PKYnRHQkjFaCw==,iv:wy1yw0pQoFOpAlI7KVwi+CDfMtOX4MXfZ5L/d+iVIE0=,tag:W0zbcYYz8hC6zJ0T9rTBPA==,type:str]
+#ENC[AES256_GCM,data:eQGsa4jw5KY6RF00Ry1R3OC1IT3RF0QtyYxwxBqFws/XZ7sXOS0=,iv:WjoMJb3E4tf+PsZ6l7P+QL0MZrulzV84Vd2/LgEUyio=,tag:vw9qMSBLYvYcOs4vyn0Pyw==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:fEktHT0fU90WkFrGawL51Z1XYdg=,iv:7A5AaVYRdQEkjA6EzzPU8lKBPwV2z0bHRri9jbkqR2w=,tag:VYQuIpE0V24yyLCzlRffUw==,type:str]
+#ENC[AES256_GCM,data:x630f8mSCxbPaR5Dc8o=,iv:IrTJqScWXiiSSezRJBX2GPW1GxHALb3vh00jqEZjC3c=,tag:YGy0MnZMmwPlloi7ecJ+qg==,type:comment]
+PODNET: ENC[AES256_GCM,data:j7f9noV1Bqr8nwPd7w==,iv:PAUKxZQ7nxNVCisLd2z6jPYSMeOsTS4jURzZ8z12rWQ=,tag:XoGNXEs2oN093g75V1A6wA==,type:str]
+SVCNET: ENC[AES256_GCM,data:zI9q/SfRiJqGcPyTlg==,iv:u6zhyga5nCBco0vyFPOdrxXxO7/oCO0DdgwvCGZ/WOQ=,tag:f28DPONXqjw5bUyHJ75XgQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlNlE5YkIveThOTHdnd01q
-            WlRYTW1yWjhFOU40ajBSTGtudWFXSU1qNFVJCmFEY3duNWFlS1YrNFlxWHEzRWpV
-            eFJNR1l1WXRZdnMwTEhtS3lrVzNjUzAKLS0tIFZVWWZreFVyRFJrY1hDTUFFMGE1
-            Nk1nMXE3TGdkQURyRDhXRTU4WTBhNzQKR0DzxAhAFTGM2KLLJ8pYeVzPfakS+vIE
-            XzVcy1w/cToj2DJuHTCuoOLCJzlNEb5cEeTF3hRRZuSjEVFxhjSISw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyV2NtRGFYSnBSRm9OeTR1
+            bEJpZDJHNkJDSithek9vS2l5MjZ0MExNTGdNCnNDWDdjaUtrRW5xaWlGa1J2aEhI
+            S0ptaHlWaXFUN0xRYlFmaTR0L0paR1kKLS0tIHEwSm4wY01xQWlCcWc3Y3hqMTBR
+            cXAwdnc3d2FJSXNvT2JrNTJ2bytWVVkKGTn0SVU+bLKQwmettou0IuE4rHwDQdR2
+            slT3fplgQXyD37H4jezzVnI8G2OLmOz5sUMAxsAPVg8WUhDI2SwT0g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:55:22Z"
-    mac: ENC[AES256_GCM,data:LPrKDMuMdFYejeMLbYR+jzZFQuW4qhQPGKhKZzUg5D/DkfKy8N01/FovPTUS9UDUX5/gEIQJ7VoHFtGzQj9UeOlkYK4leQnWF8zWIHrrp4ikDGaVBt2A+x+v4vjgnLP18RFJO5g6rNjdDInd6p7l1YRZd4t+oMzhXn7kb/Stm+g=,iv:CFk0Q8cQ9AwbGU4WX5dk7iXbJovuvjwrl58zgR67U9k=,tag:ZclPveJE4HX1zGvOs/DNdA==,type:str]
+    lastmodified: "2025-01-19T20:21:36Z"
+    mac: ENC[AES256_GCM,data:CbVADjR8N4gCLd6+OV32FXz22vtlyk7Vt2gvqkgVfBnazJAKbLOWwD0TlFtM3YijLtNnSxc86wlqPT1fRLv2DpO6BGQuc/dEQbB/kHcUn3uEXW2+Vg2OqqVKru0uND/hugUarytGJ9npNSMCz2KsFFd56TrWyJVLyaFjlMggBZ0=,iv:mGEhKeZI0G8VWJtAOBm9/T5cyggASiC3m5EcvWIViIc=,tag:K9WPNMj/nVF7WydmZBK3Rw==,type:str]
     pgp: []
     version: 3.9.2
