--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:G2n+AdKTxGErBbLeqHArnJZYvRfAMcsTofLPvCVlZAQ4zLBS7E82jdmcmYtcIlrpSngGSMVAWS5Ia9YleAHOQmE=,iv:IbbY6XsflIBLi4J+OQAgal/v2Y663i62NkXYdk9O4Gg=,tag:Wo+4bYV/TAp0nOeBikFArw==,type:comment]
-    #ENC[AES256_GCM,data:MZqvNeer3y/UJGz++mqJD3OD09cotEsgx9VhO8RSFQa5JKLVhKGiU6+8Zp0=,iv:w/NBAEtdm2f0IPZsBnOSKpAMxvgWMAjP/F6gfxnyza4=,tag:9hNyO4vw5HXWkwNqaKZAjQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:itdkDZylYlFIdw42FQ==,iv:blt+jA+qCRmSulqmVCJC/9C2qpobaskqUj8pn8QAtk0=,tag:qrohXtssTlKbbECPXeDNnA==,type:str]
-    #ENC[AES256_GCM,data:hHgdVWjgdWwRILBjoxQcSnjYavFppiNkRY9X,iv:P86d7eL9IAtSX0/A3UTCKP8je3mOKX3XBWklgv1lyBE=,tag:dQz5lRVxlGdBrqlFyp27Pg==,type:comment]
-    #ENC[AES256_GCM,data:HOh6DOba+qAs8GI+NfemW8G3kFqW3qGnduUXWHgW7vpfTr+hVmnVII/DlMLNDZsIQaOBCPid2GUQTSyjnTAVoC0e21BoUaymveyqupBuTtHsB3Ls+siOMMI=,iv:3o4mrAyRaOhQPDjRMXCa7aoGV6NdpmlATVPZq/QylI8=,tag:VqFW2qLDgSNABaAiRo34Lg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:IZDEh8IrpznzFGkULfw=,iv:ObjP3BS3A8mq4/4BKUCiIV5ym9viDelVV1ll2k7iexY=,tag:lXNvfjThNMxrd0+dfZ8Afg==,type:str]
-    #ENC[AES256_GCM,data:CtCm8NV6xG5WQIcUZcMFy8Gf0ErjnVZCHKWTVnkEeGhRfA==,iv:+2bcFUTo6j+9Wj0M7wq9+t1zAvBZJ0iXCwmk7Fq9SbA=,tag:ig6kfMWnacGjWAYDGlw5sw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:Cohcd11n5jxY8tj0Hw==,iv:G3eqL3RBDamc7FD9Xn5FLOMl3A7kH8//uHTQGAnsHas=,tag:RaSc6Z1OFkffjqZ+cVCt7Q==,type:str]
-    #ENC[AES256_GCM,data:sB8MADL88WgzklbwcLsBNRElhZRTYQ3Tqq9xl0SShcNnWNI+U64pZmhMABaGpPw=,iv:FIrldJjpBFWWKKEWtk3KarV3LSoRLd0YcnO9exVNBTo=,tag:aF7lkT6m8qQgmJClzGUcXw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:0Gw6fXExn6dBEWzDINzBIvdisbsiSyXDhPaqKUbN3w==,iv:6PCWCpgEDOexHSSkwcbDnnewBq76e0dg9qnYAw9tHag=,tag:ubjVl5SbGja+ZYkSW0qXPg==,type:str]
-    #ENC[AES256_GCM,data:/JtczWKq8gXArrm7b7AFUlOC0o+Yk00yMne6P7ITTFTDgkOcjdQNbGyDcF992VqVaP+5+rn1Zzo5k4o0ct/1G6X1dzNv2QeD1WrLZxWL2vSjPw==,iv:3cT9LhwZbvO9mQmwHYlj8e/LOOWSULyTTBgziSPszV8=,tag:2EZ9DkReMKFTkYroM4K4fw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:LMGVWLNs7WZEoDFihgHP,iv:ZWMRKNstwsGdAsWiRiJGrO9VYo1z3eXB9Thc/r82G50=,tag:mcExt+hb+6gSMhiK2BSVtw==,type:str]
-    #ENC[AES256_GCM,data:YbcvqfGbd6/d+yvQGalzrg2/7tPSfvBBmsqM9Iub1px8,iv:MIyhF6itWfb2sYyioVgdob/3vPIKiRm9UW5u+vaV8uw=,tag:6TdGHJ0chXltKk74hqeHkA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:eBA6Eh1ZgoBbPs5oPWPC,iv:o2FcV5Lqa+1mYmLRboBTFb91/xD1DpGfYNjkHAbsHdA=,tag:lRdM6ajmBkwMQsIEfD54VA==,type:str]
-    #ENC[AES256_GCM,data:qqmiP/Tbk3ix/ueoiWgiePTAGzktvS2pQIyPXkeGj18rwOqIlqztPy/9FmGCP+aHUJJq5tnOMWi2j7fWeA/aopdey/ILaY8QW3rwCAFcZ0Q=,iv:C7mPkVp7i7VD0KCTRMzJEutWtVhXzynqs+hFWr9rPX4=,tag:PSZCY3f9zaq8MFQnt6Jtzg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:R1qetsBNgiJB+T2TraDE,iv:zQXNnrpsGLxZfpvtK+xNAqVGH2T7M8a0IWO4wqmJTdM=,tag:RifI1Jxqnxtn4LBjyZTrdQ==,type:str]
-    #ENC[AES256_GCM,data:6qvKKRz5Ya0Yf8DK6VzSzPIa3NEhPktYf3OJGAn16UmIUlS146sEgr+CybAZhnf0yFZcEi97De/K2/KOz74DTVafY2qdv6VBAVdoLarX6qhB6dFCrqoM,iv:FEPgJTmEOxva+EE8TKra9rwV1aLx1NOGAj758ueDA5Y=,tag:YN1x97ozASSm61OFHm5D7A==,type:comment]
-    #ENC[AES256_GCM,data:LmNrU1je7iykhbATJO1ljCkLDv8H762SwlMZn2jmlGx6v9WNCaSAjAp74vKTNPyfUkBXNEv6xh0avpOg849CAkHkji74dQoHOnPNHKrPZgDxejUEOIdTbLCaiAAnzVksIkFMBi21gUvHIzoO97FzfTNNL9zbSZQJoqKajA==,iv:MpQEOT4oX+3Iej0/64u9vGGgId1y3ePQxUPYv+Z7nbQ=,tag:jgDrjcCRauAHbF7F+CA60Q==,type:comment]
-    #ENC[AES256_GCM,data:f3m4N/UnOO4hOxpxKllfh8J3YR5MnD7pPZeL9L2yBf612xyCP+V6YYApr+BPf7V2wJHwl4wp4BxM8gqoxMGCPUCzsSPMkjyNZkZr7cSfm90=,iv:+rJGrMU3mr5H02EpJ5z3Qh4UXhJKGztgDMgT7rr09VA=,tag:jwYm7Xz6ZAh0XXgKm9dO2Q==,type:comment]
-    #ENC[AES256_GCM,data:cUSfEK8zvOJFylTKjvZQeQ6quUibUWFzVDoI5GEJ9C4JODEnV48kGnnjeW58mz5+Iw6mgap3,iv:QVHr9B5af1B3qXQ+tERCgz3rD2jECvL/Fq5EzbXES0E=,tag:xLrH/VlBmHIpSmWbG3VJAA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:UWx4L08UjANvcrT3,iv:5sDrK8g0iaFbsAU2E31EsFCO2iBNzV1gS4DVp7k+CrY=,tag:/O4jX4rlG7jNot6F0nyXaA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:WLLR3WWtc09+rdnFU0A9cho=,iv:WIt1HCM2apzB14wKeLOF4D0Zqa8CZJfsL7LWrft7YaE=,tag:vIlt1Ub/uzIkUdJ/7lYSKQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:JBBueP740fQhmPGMFWCAPGEkd1MGP8u8tI+o0XwrRRI=,iv:TGoVsXg+ablAD+/QSmm7V4kCdYs3B2FByIVCvmJDYe4=,tag:WqTQ2NkCd6gbf7+ynUxRiw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:TqXf4ICbeENf/U89HkqcoRmvg0m9lKMgv+0ziRbpi3WCpjVC1/OLdQ==,iv:2F47xH2LNp9MzzPo6RB378OF451wR/Kr3QktotHiM7I=,tag:Qqr5gh916lmqIShTz+NODQ==,type:str]
-    #ENC[AES256_GCM,data:d19CYjuRLXKIyeD5T2qdatmnKlHs2BRMVWBS1YfvNsvUVDCl1gLKW+bLhujO4JfHxHLmKKcS5xYywcpToK8LvQ==,iv:Pkv5ct5BpJSE89Z2J2fy+Lkivdt0vsfHd1EJuTSzVdc=,tag:SkNZ+g0UwjjZAWQMAeGG0A==,type:comment]
-    #ENC[AES256_GCM,data:0ugLVloVMly13EamaRlCLjjeor9lSdYAvOFiSAAbX06BhEjkD5zze2TVjdYHivWlZLoDtSjbfNE=,iv:0ZYYwNSXc7E1XPO6pIFqXAklwH6MzU3lA9X3CTsRAOw=,tag:u4myWdQZlX8eIvXp8W//4A==,type:comment]
-    #ENC[AES256_GCM,data:jyDBrIl83jw/cieS0ovVopSJYFcA3KtoRg==,iv:pxYIhZqnquGXruZjal7RR3RlmDgBFtEPOvIURReF+Us=,tag:cqOkkyNg4ZFNdE41WDK8Rg==,type:comment]
-    #ENC[AES256_GCM,data:LwKrySPtCpK0L44rPEANeuVOTcHZB9OQQZo0MBYVwiOOH9AjqsXT4/X2izEs/MEYwbU+Wxx8vUC14f8/w5yqkNK7oHbZ8DrJHVgcIYg=,iv:hzVkAcLjUp7C4/9QveTXwO9LpLLBbSkB1kt/4ioqzgE=,tag:3zpF5Dabr/K7/kPe6552oA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:8Y2Ri7BELFRkvoJ/YOsmArfX6DjvJstL9NZz+Mmq5t3HVrPq6gNYZCrbNwDi1u7m,iv:JaTZ+U/cuqidG/VjKby5ae04hK3JQAP4qHdcyuTW8Ok=,tag:f9gkdDBN/8Y+10zbxtSCRQ==,type:str]
-    #ENC[AES256_GCM,data:Gp0A+CknwLalIprAWyndPLsDdwAPdG4YPkeUFGERDXx2fGmD2GLY+/Ou3sjaF0fBCYZfEQnU7EA1Q5FUawfZncLj4d8lDcM=,iv:iqQ7dFVPqJbiiDlylTvTOcZCgCAjI/1W8TlSPWRmbv4=,tag:rI9EKp0bIyua02GxZ/9Maw==,type:comment]
-    #ENC[AES256_GCM,data:2OHWL1kN81cmxe3vB8wlnyu9y0/4Ty7A9TzK8z/8vil3atLaFZeJwaHzursZalkRRXST8Rbn,iv:BZSH6X700aNqlnmfhI+Zd9yp2WDtV/S5lbRE0+q20zI=,tag:dWy5JcZSvS6+TXXg0quNuA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:1ygMB1Tgpw==,iv:2IR+/tyDDnyOhmlTtQ2IFoFbrtP5koskPQfvogQyFa0=,tag:sXP1M+RArJ+V+kODx+5a4g==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:vG9uOPi/CDSKjfBNCyTcV7lAkkU=,iv:oJIvqhXvmRyuch8LAsWpnYkQDbChl9gtuaxuUh/Ik0U=,tag:BnjAkAh+XhE9r10TmyXbCg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:0OCM7uaOFrnRgks=,iv:ft/FPgcTqY+EAihmprNgHRTb7LtEISy8Vem5h/1h2GU=,tag:lOyVB9Aa91B5mMH+CpXyFQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:T5jNyECDWyqTWX9+vF2o,iv:7KzW1yMIl25uivoEC6wIcUMIVwkePaefRIfa9kHAA6k=,tag:HkNY5ufF2DgPjJEl79c/vg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:S4jgxpQC5QtijBox06sVVlJ9aTLXkFCZMA==,iv:f95r4DIPYmbCpEO1QlwQWjpmOQvrKxfLYHW/WVwHApg=,tag:dKdKzX4DuyLkcwmjB8er2A==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:P86UwHtuyOJ9Dhe82oWFJ75STixb1SkESSK+vpERMA==,iv:m1wy1TtEN96cYL7QOx6Rjki1+c6hV07uv5RNEodD0yg=,tag:GNMcwZcuGiSSxoWhyaFvGg==,type:str]
-    #ENC[AES256_GCM,data:12PqJ8PT07xL7ELj9varWNB8v3ufBSRwADxW+CLAGfyyfnYCcSc=,iv:1lgmSYPuB/OOFJsWLR2/9U0+ko1KmyEvK+9K2SUyPDA=,tag:ykHBFAf6M1jpOOcp4HUAag==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:4Kh5+pa+fIMbjHH7YjtDMWgmTC8=,iv:kPdOKfpNBt25eUQRRmFGtUlZx53544rWEFdakQQrGoo=,tag:N62hRgwpQYXmDRwpPizqKw==,type:str]
-    #ENC[AES256_GCM,data:0r/Cy9sYf3C45P0Bo8M=,iv:l0SjhvI5at1bAPDGBJoIF6oiwwMAISwhPou4dYhXNuU=,tag:m4Tv2ziDhQldV7wzCwzpZw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:uNlZEA4iXhovWCYy1Q==,iv:MzimOk9Ez63M2ST9KmOo7R2HGzwZcAGyQu9uX2pneeY=,tag:DUwMn9v9Q3TXrEQgAVRyjw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:UHA/izpq+qIHlchfkA==,iv:47q1hM77FrVbNzHJt/rne5zvGeb5funG0JPoRFPOSuI=,tag:VAEUh7YRqDd8w+Xi9NRw7w==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:TCFM+A==,iv:bzfxtudGo13DVxHakCIgZmNpBj7BlBkkMamQKJvIn78=,tag:f0T18qt5LW+ow6h0C7ruzQ==,type:str]
+    #ENC[AES256_GCM,data:Vugh5XXhJuzLoAGZUiKdYn7dSoC++Ld2GuQvNvwlQ+oNouMZaBnbFdDvzQh1tpWkC6q+vYxE21esmMuLQVzpedM=,iv:MUR9mSCN1r72YbPCwqaPxLEI9faf6dKrvMPtg7uvUPw=,tag:ORBGXM4JihjM6Oe0lGbDzw==,type:comment]
+    #ENC[AES256_GCM,data:gRy3E+zAZDW5zka2DOObOBEliw2kkyP7pHTn9JdMh8DW6Eowh2yyX+yoWLU=,iv:1PiVbFL8yQFDm5ENf9g1AAwj1anr7njPA4Q/Gmp3FQE=,tag:Ay8+kRBkSHG9NQtu3fauMQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:jcjQAVPAGb1vcyM1bw==,iv:9owp7sfFhEdvslwVGcHW8CB0mpaE6Zz9GhtQZsVmNuI=,tag:HWdu9LXBG6810ENVdIxalA==,type:str]
+    #ENC[AES256_GCM,data:mvi4Zzo2v2rY9BgTO6BLIsVMfkHnszCknuxj,iv:0vH513QS+oJG6RVs//j2nJxvEDF51OcmqoPRhvvduuI=,tag:CVpVFB7RdIcklP2KHfVCWQ==,type:comment]
+    #ENC[AES256_GCM,data:b1CjVV5Zw7FBbDXcZ8d8sWgoMJu7sXynF1o4VJ0MH3/1O552GdJvX6adpAhtKXKZOjIfGSmNAw9+5lRVV53ELvp2yV0Yx5BnoN1GtqLSlDPY6j9i+UCTy+k=,iv:ZqizTOOoKq3yzW2icbtJBt31d3v7voJLaPlzxliWDyA=,tag:yd4cm9SheQyuEISw/udvXg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:ef9kHouIiOjsB/Eok2I=,iv:0k16Kp1lTRojeGUsqDq1OC7dQlAiFhKiNPUxoKgEdzc=,tag:j705nR0QTrH6i6GI5fg7QA==,type:str]
+    #ENC[AES256_GCM,data:XtocwCz4YRlG/0YRhTA7PcLF7HTtFSoVIx9YBXmnVttRdQ==,iv:6o2u71G2fZ/kiUQRh2N1G4s6CRD8gkcBdtXlkDmIGz8=,tag:Xbf+4AIUbrwTnfDOPynUsw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:1JNKTX1dSGyBgQEF5Q==,iv:yfiC8ebKM1UeV7O3Mn4EIalNc2cJW3bj318Nlye7oHQ=,tag:AHZG3CUeV+ts2AdnS5gOKQ==,type:str]
+    #ENC[AES256_GCM,data:inlKyHQLFCECR3Q1wZQfV8u0YwE9wn82/czJsQhmCSTMUANuj6RDs24P4kU9mIQ=,iv:p+DdKrhjKl46OtbhHhRbehI35RSwTRbJIoEHii/6AOo=,tag:L5t7KW9jumodxcGdCSB9Hw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:NcYhrdGJrv84lEQTaa+72tp3yMS9Kn3ekPsE+X+fMA==,iv:ZyLH1EORKXy4hVriDn2NxdTYladO7sCCr5E/6LbKO2Q=,tag:jQjflgGM5lhwLWDYBAKs9w==,type:str]
+    #ENC[AES256_GCM,data:iXms+VZ2m5vqaFjdimFsdNwsBvtmp2PU/rN2ulyodRrjdbpZ69hGOoNABlwgVj8rcsl1Wc/XwYOg7oIN8gQAXfItRtkfsJPhLcYnDYbJVsg51A==,iv:8QbBIBxGyWc05KFNICho53lkHaUTYPTHTsYqqj0ey3U=,tag:iUV/ifyrN5zveS7dW6ASYA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:GbvVBfxSONJALSPbIDlp,iv:UUkSr9KgCyPF/s8Wnb4z358DPxAABo4FyYLVqAYLQrM=,tag:5fxCaxR0/QRgdccotum+Rg==,type:str]
+    #ENC[AES256_GCM,data:Eqe+TZKf7bIGfz5PuUyhMkH3u1LMRzeFB7JUEfwEfLTO,iv:1eLDTn/EkfC25nK7be6GmJGvtHXEj/rrYSt4w/IN49M=,tag:DBcOIYA+kZCsRvtpnS8JDA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:fLO/c4STnw+RxgDbDKUB,iv:u9FW152EGZ46EZgIoWq4vkxLHLaIWO06Iy/gwJvpC3w=,tag:Vn3S5d159WPB37k8aZssOw==,type:str]
+    #ENC[AES256_GCM,data:yUZqy4v4WynKbGhPbwYAp9v+BHaijZ0xO4y8sySsqp3Gqafcuuy7Gi5btrReSIWJ71jWhNkQwDdPwvg3EkiZjqnR+WQLmE5KTnIxlDQD4gA=,iv:cqmcBOY+EChTDvK75j9NNzlI9PZysKqiCG8gEHsTAQg=,tag:8S3VhFE9UIWYzE7nRSxwSg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:fe32/gas2MHl3KEFjNhZ,iv:cZsdo1rG3tUaA0TI8ZQeeEv1U4bECrAWlzgVZXQu9QQ=,tag:xnjBum517F8+TPzEyfm3Gw==,type:str]
+    #ENC[AES256_GCM,data:hfGZxdqbx0D3qt3RvLTZzZKTpqfNk8hw3BoD+PJMX7UL2DEYFtTzDTeM+eX5yoO5XdsFYQX2OAAHsp7STvkzfLV22w25IUdisqJ+SVwlgbNE3BRu4izf,iv:2jKytTluastXqB/gdjewC6donIOAEYriOy5Ja74ObhM=,tag:nVU3u6jPXLV2k+Dt0Ry/MQ==,type:comment]
+    #ENC[AES256_GCM,data:9tze7cm1hGyDveF3JuVcigQCUjSz7Mq1KG4gvv1CtKpPzyS8/R4uvOZwKQpzEUMo9+iKQYS/yOAQFV3Rup19lqms2RWn8YCNWbMkNf5V95oR0/N1F+ngjVtUojHoUjXbq+naFeEtv5PecnSkq3zhRjT344LeLpYcsYtqbQ==,iv:0MgmhksPxbbeUURr5pbHZ4AVUf3tt7PCrddVpEyp0pw=,tag:1GbHHtKYkeppBFO8jBQzog==,type:comment]
+    #ENC[AES256_GCM,data:8gEPxV2eWUKEHOLO9yE0voJH1XbwswHCDpohxV7KtoJpGZsTr9lzRGog9+IdCnFz+HJgLR8zgkfdZX5sxht38j3K542bCRuC8MM5WH3mzvc=,iv:60EM3ktVm2QGElUsSYeNpKvrZqTWOacoRwnDT1r81h8=,tag:CA3pxTcR9jQ6oKse59B6xQ==,type:comment]
+    #ENC[AES256_GCM,data:Y5eUBFIrzpe03+TE1jLh4KA1fDo63xfyNpGi9Jq9vG2+5SWda9u4dXMrPjNkvU1ePMzyEqWA,iv:X0ip0zMPCPWbE26EMmnw9WMk9hLfbrLRmNhs+lBVT4A=,tag:ss58Ngcxie1azeTeeONbIQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:rVrS/7mTF1L6Y97n,iv:oMfjf1lUGkzIFwk11IDxYptYldMu17koPOxqxZ+wULk=,tag:xGe+x8l04+anXMCGOYyhLA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:10SKliiTG15zgUEMm5tBR3E=,iv:kmQxiZVwpos3qrLpxFCgnjTFGXfn7vhmpkHt5lvrA8M=,tag:+lRH8bHsSVvnZ18jH/EDXA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:UdGwMW/zKSYaFqf2cBUqFXkkVNIx39qzsjRW2NnpZ54=,iv:fBQDiBT27JuSmsvfjmHd/vkhtmcYL0XV1sEdSpwhROM=,tag:KsgEk9fsssiOIuSfZes2xA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:kFVN/Bc8IX0yPt3rdWAW1+F9xe2OTD9CcBuJKWYAVaIMw3HK0/osYQ==,iv:BAv9wnR1s1rBWTWmleSCUR/68z0oOP87dP9r/Tz/x0M=,tag:4Fy6jnoOmT08yTNEcrsbCQ==,type:str]
+    #ENC[AES256_GCM,data:MRKiR8nVu06qrfhJlde9WeVCytGZ2TviMF5KNFFwP/fqqbb5ZhwXTNkvL29jRQt4uzFElHxT+iYNFurDm0OgIQ==,iv:08ycxoCLgBTPdBoPioMdeKh4QelFGMHHrLB4UhAPHI8=,tag:FQI6Mqamp2qR8tD3Eu3jpg==,type:comment]
+    #ENC[AES256_GCM,data:dHLhwGaA3PnHFlGWvknCH/x2aQ/+MuUX0Xd929WHw/hDeqYYYFwpONEzBX+DGEdNfvWXlaMF4hs=,iv:sQwrM1SlQeupoxZKcoIz8BtqkJyNcsWKfntLOJh3r/Y=,tag:kYSOpe8K9mWo+DCY8VOdbA==,type:comment]
+    #ENC[AES256_GCM,data:mj/ri8QNsVDsnNaMCsoSS3HGh5DJbN7V1Q==,iv:RZbJrqFnZhjk8kkVwvr2mwhRdMbE8ut1yEMgNfdYCuI=,tag:iriRvI0ZnTrkn2y0oQy9Og==,type:comment]
+    #ENC[AES256_GCM,data:r1I6q24i5PHRX1lLWHK9qzL4tMXgjyNZz5EStYngOmS+qg70G4W0Ekpj7bERP2lJSKTTJgFksc+t0bysLuIS0BzwsObXrGlfkdA4wcM=,iv:6hDQNTUXgGkUzghlIT3hEu3g/CtEFPiwUcp0lW6eTAc=,tag:C5faOH7JEz/p8a6gesGWXQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:3IefOEZyXM5kR++WuN99pbNTs5eFUW3uSeoyWceSoHS4g+n60zj9sDx+K77rRLMV,iv:xGQ3uTVxOqaXgEgvhU7bl4s72hC4BMMeRXm1zgGadJk=,tag:XY/QXfwipdeHaeHkgWfF+g==,type:str]
+    #ENC[AES256_GCM,data:fu0QROc/Wny9iUUEsWkY1OCqbZpiit1f1nNyoFXE/3Zu452uu9JChg6E5Oana8bo7GQTAQKIgNhfMR9NrtrPaTP0pd0B0nY=,iv:iqpZ1f8ueSVKx4uLwrtNMxzTLoJnSIh9xbYSutaW6ms=,tag:bmHHuojERuNPuTIDn9sB/w==,type:comment]
+    #ENC[AES256_GCM,data:ZniJ9mamNjBc3nSfi/ZQk8VDQKzwOJiYFreK3VpPnohkrEV/ABEo2ejqqBMN2YP7i9NWUyG2,iv:o66IJD+gBkc6ow2ZCEeqVb+E1zXW6YlwykySPHU2TTM=,tag:Rwi1+OE9a5GAy8uTI6CRYQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:MMTHQXe+jQ==,iv:jRDKL9kb4grRUQYtfapYA4JArPKB5Xf8GTV0It29iYM=,tag:UEdObehMHOvx71fxwQWvIg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:di8/H2EwFPrmVvYAhZTfw+Mjm/0=,iv:5w1s45oLwJO23Uv+m5Hu4Zh67KkwhDSKH5DbunKx+bg=,tag:VH/HXcPvDvc6hXGG1BoE+w==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:MkcAqN3rIZZSj0g=,iv:SxgbRrMmNuX6pvmoILeXkxcqQwwYE5uHL3nfn1gA6Ho=,tag:64u/T7kkKDFfbbkHUu5PPQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:0L0Psr9S+8awOIkmHTNM,iv:JFuHPI8dQr7p55+huvwwm7lEtd4o21+Kq7QOIjxsoY4=,tag:Ft1G7EVPokqnkU11BaWIWg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:n9r3aQdsbCGcpy42tsBCB5x7ISMByBS6Aw==,iv:fcQTQENWqvmG1V2PGe56oUS2EKUjTqNmTfnBszzAGKo=,tag:rfqJ8+a2r6pahqFqCVYS7Q==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:6R/HxPf7NcGtr+JYx8FEgHkVk/MVZbYhDSRt65wI8Q==,iv:CkQCQ5oDR+VraU6NeYPJVjfkv8pC4bW7gCBpOt4B/fo=,tag:OVJknwTzodI6iRl7h2OYdw==,type:str]
+    #ENC[AES256_GCM,data:p4g8CNN+ZqdU/me3QUnV/acLqtsxXUAR0kupX8XGFq3altbodAs=,iv:UMuQGHOk7q8IJgw0icSnBI5k8+hMHj1+/OvvyZ4fj20=,tag:749CvOLIYDIfPdJ3MLjB1g==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:9OnoQFoHB9dqhDGK39lMEIGk5Hw=,iv:4QMy/hOdJWqewrdXP2+T2R49skqIISkH1oo/2z8hxxs=,tag:9T6dDarFxwvw00qXG2Nouw==,type:str]
+    #ENC[AES256_GCM,data:ZZHVkqVMvYrlm6YFY3A=,iv:4B5ik4l4l8ywXPvB7gPJsy5cwE6Aizfu980Q+rsHO30=,tag:7NJ03gtA+2WsX3cQaCTUbw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:OYrBA1Nf/nbbm+xO2g==,iv:HHXxgGzUiYSs38yK/4oV0FE4V8RAZ/M2suWO46Cgaz4=,tag:I36DNwVI8HNBPXgd+IFOsQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:ENvO5puWsfoBBNXykA==,iv:Tc7MS82zKe4z5TK2a3Ks+aNtDOdd0kyBtXzHG8V6Cvc=,tag:/1mWC3w0U8VXA4g/8zyEUw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:tCa7FA==,iv:El+8gKwnapLkX3nr1+TJMnqciFM9x5mKtyRMf+xTbbs=,tag:2sJiaVsMviK5A9rS3B/zaA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBWmk2OEJaeW5Odm9MaHZh
-            Q2RXc1hZNXJBU1RoOU5BYWNqSlhqU3hzdlJ3CjZNQTJ2YWcwazRDY0Q1UVhSTDFY
-            WkEwWEIvYm13YkJiaUFjSmZhUFhwZ0EKLS0tIDErNzlVQ2d6OEdMM1Znd09ZYko1
-            dFl0b1F6c3V1ckg4S3JoZlBuS0VUQTQKCU8dLcTWA9D7CHeiKCwL4oXaWSDSOpf9
-            iWsNj0Yd6nmWyI7X1t4UUZzjrVKLFtHgwiRwQ6Qv6OOwIPBU3PpshQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArZ01HdWtUUHNVQUJYRGMz
+            TmlkVzI1NEtsMDJoQlRNZ2ZLRWIyU1pKY2swCnFiWGl6VStZYzVlcW1IN2ZteUZ2
+            RThRcUpJZ1A1dmY5cDV3MzhTcndNSlkKLS0tIEVtOGpjMHcrZFFMYUxNcEFsOUNK
+            TGNmcmlDLytxWjhVZmJUWW95MzZGYmsKdWzEumj+CO65/cLwIfo3YkpYgR2d1auU
+            okgTj8EAUgkInELphM4OAefOsZ0ymRr07HCMKdLJPKexjA+zOCzkmg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:55:22Z"
-    mac: ENC[AES256_GCM,data:b+clKhEYCABMZTl5r5L0OXS3Lhh9Ip5DMMvYPBUZ24pj7eEedoS2z+najNTzeghDGDqRTA3/hmgODfb8H9rVcdwMecTBAxIVDfbsBqGl0PmU4rY48fCpGnGgyxXfVdaCM49uXpI1Hie6x4HiV3hWuz09Co8DDj6QsMqBFxNmoSo=,iv:NKd6ueL35TxfXvTSK24zoAfK1W7ADOT8C3zEo5Kb3Uo=,tag:PKmDTnrksDtd5V06teEyqQ==,type:str]
+    lastmodified: "2025-01-19T20:21:36Z"
+    mac: ENC[AES256_GCM,data:NNkGWFRzutEZ62LxT5Rs+8JB4Jyupv2RA07w1ZRmjbNvn2Mmmp8nLxNC7NYKy9WeDrLaRjufJ+Np5xvEMjbCdSKcIHocDWwr7ZHWaVEQAsXk++TjRTyK3x0fKJF5gHnurOk5iEGARYBi5Sm7OeqYJyUjdU0dhnqG+rsXY6ADQxo=,iv:7zPsNe0FaRNBxFqrBvQoop5gYhS2n+06Oxy9pxf1aMM=,tag:FLBJqis1mi3huWA528VekQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
