--- a/clusters/main/kubernetes/core/kustomization.yaml
+++ b/clusters/main/kubernetes/core/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
   - metallb-config/ks.yaml
   - system-upgrade-controller-plans/ks.yaml
   - traefik/ks.yaml
+  - intel-device-plugins-gpu/ks.yaml
+  - intel-gpu-plugin-operator/ks.yaml
